--- a/slides.tex
+++ b/slides.tex
@@ -1,6 +1,7 @@
 \documentclass[aspectratio=169]{beamer}
 
 \usepackage[utf8]{inputenc}
+%\usepackage{apacite}
 \renewcommand{\familydefault}{\sfdefault}
 
 \title{Imposter Syndrome}
@@ -15,7 +16,7 @@
 \begin{frame}
   \begin{center}
     \Huge "the experience of fraudulent thoughts and feelings and the inability to attribute and internalize personal achievement"
-    \small Outing the Imposter: Study Exploring Imposter Phenomenon among Higher Education Faculty, Hutchins, Holly, 2015, DOI 10.1002/nha3.20098
+    %\cite{hh15}
   \end{center}
 \end{frame}
 
@@ -364,5 +365,11 @@
     \Huge
   \end{center}
 \end{frame}
+
+%\begin{frame}
+%\bibliographystyle{apacite}
+
+%\bibliography{slides}
+%\end{frame}
 
 \end{document}
