Fix open script

--- a/slides.tex
+++ b/slides.tex
@@ -1,7 +1,7 @@
 \documentclass[aspectratio=169]{beamer}
 
 \usepackage[utf8]{inputenc}
-%\usepackage{apacite}
+\usepackage{natbib}
 \renewcommand{\familydefault}{\sfdefault}
 
 \title{Imposter Syndrome}
@@ -16,7 +16,7 @@
 \begin{frame}
   \begin{center}
     \Huge "the experience of fraudulent thoughts and feelings and the inability to attribute and internalize personal achievement"
-    %\cite{hh15}
+    \cite{hh15}
   \end{center}
 \end{frame}
 
@@ -366,10 +366,10 @@
   \end{center}
 \end{frame}
 
-%\begin{frame}
-%\bibliographystyle{apacite}
+\begin{frame}
+\bibliographystyle{apacite}
 
-%\bibliography{slides}
-%\end{frame}
+\bibliography{./slides}
+\end{frame}
 
 \end{document}
