--- a/slides.bib
+++ b/slides.bib
@@ -1,8 +1,12 @@
 @article {hh15,
   author={Hutchins, Holly},
   title={Outing the Imposter: Study Exploring Imposter Phenomenon among Higher Education Faculty},
+  journal={New Horizons in Adult Education and Human Resource Development},
+  volume={27},
+  issue={2},
   year=2015,
-  doi={10.1002/nha3.20098}
+  doi={10.1002/nha3.20098},
+  pages={3-12}
 }
 @article {ahu61a,
   author={Arrow, Kenneth J. and Leonid Hurwicz and Hirofumi Uzawa},
