--- a/slides.tex
+++ b/slides.tex
@@ -1,7 +1,7 @@
 \documentclass[aspectratio=169]{beamer}
 
 \usepackage[utf8]{inputenc}
-\usepackage{natbib}
+\usepackage[natbibapa]{apacite}
 \renewcommand{\familydefault}{\sfdefault}
 
 \title{Imposter Syndrome}
@@ -366,10 +366,10 @@
   \end{center}
 \end{frame}
 
-\begin{frame}
-\bibliographystyle{apacite}
+%\begin{frame}
+%  \bibliographystyle{apacite}
 
-\bibliography{./slides}
-\end{frame}
+%  \bibliography{./slides}
+%\end{frame}
 
 \end{document}
