Add citations and full CIPS

--- a/slides.bib
+++ b/slides.bib
@@ -8,6 +8,32 @@
   doi={10.1002/nha3.20098},
   pages={3-12}
 }
+@book{Clance85,
+  author* = {Pauline Rose Clance, Ph.D., ABPP},
+  year = {1985},
+  title = {The Impostor Phenomenon:  When Success Makes You Feel Like A Fake},
+  publisher = {Bantam Books},
+  address = {Toronto},
+  pages={20-22}
+}
+@article {clanceimes78,
+  author={Clance, Pauline Rose and Imes, Suzanne},
+  title={The Imposter Phenomenon in High Achieving Women: Dynamics and Therapeutic Intervention},
+  journal={Psychotherapy Theory, Research and Practice},
+  volume={15},
+  issue={3},
+  year=1978,
+}
+
+@article {sakulku11,
+  author={Sakulku, Jaruwan and Alexander, James},
+  title={The Impostor Phenomenon},
+  journal={International Journal of Behavioral Science},
+  volume={6},
+  issue={1},
+  year=2011,
+  pages={73-92}
+}
 @article {ahu61a,
   author={Arrow, Kenneth J. and Leonid Hurwicz and Hirofumi Uzawa},
   title={Constraint qualifications in maximization problems},
