--- a/slides.tex
+++ b/slides.tex
@@ -2,6 +2,7 @@
 
 \usepackage[utf8]{inputenc}
 \usepackage[natbibapa]{apacite}
+\usepackage{fancyhdr}
 \renewcommand{\familydefault}{\sfdefault}
 
 \title{Imposter Syndrome}
@@ -15,20 +16,21 @@
 
 \begin{frame}
   \begin{center}
-    \Huge "the experience of fraudulent thoughts and feelings and the inability to attribute and internalize personal achievement"
-    \cite{hh15}
-  \end{center}
-\end{frame}
-
-\begin{frame}
-  \begin{center}
-    \Huge My Story
+    \Huge `the experience of fraudulent thoughts and feelings and the inability to attribute and internalize personal achievement'
+    \\ \small \cite{hh15}
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
     \Huge Are any of these true for you?
+    \\ \small \cite{clance85}
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge  I have often succeeded on a test or task even though I was afraid that I would not do well before I undertook the task
   \end{center}
 \end{frame}
 
@@ -40,39 +42,43 @@
 
 \begin{frame}
   \begin{center}
-    \Huge  When  people  praise  me  for  something  I’ve  accomplished,  I’m  afraid  I  won’t  be able to live up to their expectations of me in the future.
+    \Huge  I avoid evaluations if possible and have a dread of others evaluating me
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
-    \Huge  I sometimes think I obtained my present position or gained my present success because I happened to be in the right
-    place at the right time or knew the right people.
+    \Huge  When  people  praise  me  for  something  I’ve  accomplished,  I’m  afraid  I  won’t  be able to live up to their expectations of me in the future
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
-    \Huge  I’m  afraid  people  important  to  me  may  find  out  that  I’m  not  as  capable  as  they  think  I  am.
+    \Huge  I sometimes think I obtained my present position or gained my present success because I happened to be in the right place at the right time or knew the right people
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
-    \Huge I tend to remember the in
-    cidents in which I have not done my best more than those times I have done my best
+    \Huge  I’m  afraid  people  important  to  me  may  find  out  that  I’m  not  as  capable  as  they  think  I  am
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
-    \Huge  I rarely do a project or task as well as I’d like to do it.
+    \Huge I tend to remember the incidents in which I have not done my best more than those times I have done my best
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
-    \Huge  Sometimes I feel or believe that my success in my life or in my job has been the result of some kind of error.
+    \Huge  I rarely do a project or task as well as I’d like to do it
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge  Sometimes I feel or believe that my success in my life or in my job has been the result of some kind of error
   \end{center}
 \end{frame}
 
@@ -84,21 +90,76 @@
 
 \begin{frame}
   \begin{center}
+    \Huge At times, I feel my success has been due to some kind of luck
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge   I’m  disappointed  at  times  in  my  present  accomplishments  and  think  I should have accomplished much more
+\end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
     \Huge   Sometimes I’m afraid others will discover how much knowledge or ability I really lack
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
-    \Huge Clance Imposter Phenomenon scale
+    \Huge     I’m  often  afraid  that  I  may  fail  at  a  new  assignment  or  undertaking  even  though  I  generally  do  well  at  what  I
+  attempt
+\end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge   When  I’ve  succeeded  at  something  and  received  recognition  for  my  accomplishments,  I  have  doubts  that I can keep repeating that success
+\end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge     If  I  receive  a  great  deal  of  praise  and  recognition  for  something  I’ve  accomplished,  I  tend  to  discount  the  importance
+  of  what  I’ve  done
+\end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge     I often compare my ability to those around me and think they may be more intelligent than I am
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
+    \Huge      I often worry about not succeeding with a project or examination, even though others around me have considerable
+confidence that I will do well
+\end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge       If  I’m  going  to  receive  a  promotion  or  gain  recognition  of  some  kind,  I  hesitate  to  tell  others  until  it  is  an
+  accomplished fact
+\end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge  I  feel  bad  and  discouraged  if  I’m  not  `the  best'  or  at  least  `very  special'  in  situations  that  involve  achievement
+\end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
     \Huge Who has it?
+    \\ \small \cite{clanceimes78}
 % initially discovered in high achieving women studying and in academia
 % later found in to be in other populations too
+% Maybe higher in women, research goes both ways (citation?)
+% Maybe higher in some ethnic group, studied in African Americans (citation?
 % http://www.paulineroseclance.com/pdf/ip_high_achieving_women.pdf
   \end{center}
 \end{frame}
@@ -106,13 +167,13 @@
 \begin{frame}
   \begin{center}
     \Huge What are the characteristics?
-    % Clance (1985) as cited in Sakulku (Jarawan)
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
-    \Huge Imposter cycle (photo)
+    \includegraphics[scale=.5]{./assets/clance-impostor-cycle.png}
+    \\ \small \cite{sakulku11}
   \end{center}
 \end{frame}
 
@@ -122,12 +183,15 @@
     % will be the biggest fish in a small pond (school)
     % then go to uni - lots of bright people, not the best anymore
     % conclude that they are stupid because they aren't the best anymore
+    \\ \small \cite{sakulku11}
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
     \Huge Superman/Superwoman aspects
+
+    \\ \small \cite{sakulku11}
     % perfectionism
   \end{center}
 \end{frame}
@@ -135,12 +199,16 @@
 \begin{frame}
   \begin{center}
     \Huge Denial of competence and Discounting praise
+
+    \\ \small \cite{sakulku11}
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
     \Huge Fear and guilt about success
+
+    \\ \small \cite{sakulku11}
   \end{center}
 \end{frame}
 
@@ -153,16 +221,18 @@
 % if told that because they are a woman then stereotype threat?
 % or, told that they are superior in every way and success will come easily
 % Then they can't cope with when it doesn't
+
+    \\ \small \cite{sakulku11}
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
-    \Huge Personality traits contribute?
+    \Huge Personality traits
 % "common among individuals with particular personality traits (e.g. neurot-
     icism, conscientiousness, achievement-orientation), have perfectionist expectations over work"
-    Outing the imposter: study exploring IP among HE faculty
-    DOI:  10.1002/nha3.20098
+%    Outing the imposter: study exploring IP among HE faculty
+%    DOI:  10.1002/nha3.20098
   \end{center}
 \end{frame}
 
@@ -366,10 +436,10 @@
   \end{center}
 \end{frame}
 
-%\begin{frame}
-%  \bibliographystyle{apacite}
+\begin{frame}
+ \bibliographystyle{apacite}
 
-%  \bibliography{./slides}
-%\end{frame}
+  \bibliography{./slides}
+\end{frame}
 
 \end{document}
