--- a/slides.tex
+++ b/slides.tex
@@ -191,7 +191,7 @@ confidence that I will do well
   \begin{center}
     \Huge Superman/Superwoman aspects
 
-    \\ \small \cite{sakulku11}
+    %\\ \small \cite{sakulku11}
     % perfectionism
   \end{center}
 \end{frame}
