Add some more citations

--- a/slides.tex
+++ b/slides.tex
@@ -179,6 +179,20 @@ confidence that I will do well
 
 \begin{frame}
   \begin{center}
+    \Huge How does it work?
+% attribute successes to outside factors - luck, colleagues
+% attribute failures to themselves
+% found to be far more common in women than men
+% women viewing ourselves as phony is consistent with societal view that we aren't competent
+% easier to not internalize success than go against the views of society!
+% often seem to perservere despite that, some desire to prove society and themselves wrong
+    \\ \small \cite{hh15}
+  \end{center}
+\end{frame}
+
+
+\begin{frame}
+  \begin{center}
     \Huge Desire to be the best
     % will be the biggest fish in a small pond (school)
     % then go to uni - lots of bright people, not the best anymore
@@ -190,8 +204,7 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge Superman/Superwoman aspects
-
-    %\\ \small \cite{sakulku11}
+    \\ \small \cite{sakulku11}
     % perfectionism
   \end{center}
 \end{frame}
@@ -199,7 +212,6 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge Denial of competence and Discounting praise
-
     \\ \small \cite{sakulku11}
   \end{center}
 \end{frame}
@@ -207,7 +219,6 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge Fear and guilt about success
-
     \\ \small \cite{sakulku11}
   \end{center}
 \end{frame}
@@ -222,17 +233,15 @@ confidence that I will do well
 % or, told that they are superior in every way and success will come easily
 % Then they can't cope with when it doesn't
 
-    \\ \small \cite{sakulku11}
+    \small \cite{sakulku11}
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
     \Huge Personality traits
-% "common among individuals with particular personality traits (e.g. neurot-
-    icism, conscientiousness, achievement-orientation), have perfectionist expectations over work"
-%    Outing the imposter: study exploring IP among HE faculty
-%    DOI:  10.1002/nha3.20098
+% "common among individuals with particular personality traits (e.g. neuroticism, conscientiousness, achievement-orientation), have perfectionist expectations over work"
+    \\ \small \cite{hh15}
   \end{center}
 \end{frame}
 
@@ -242,40 +251,23 @@ confidence that I will do well
 % "and who work in highly competitive, stressful occupations similar to that of the academic environment"
 % what about peer review?
 % minorities in the field?
-    Outing the imposter: study exploring IP among HE faculty
-    DOI:  10.1002/nha3.20098
+    \\ \small \cite{hh15}
   \end{center}
 \end{frame}
 
-\begin{frame}
-  \begin{center}
-    \Huge How does it work?
-% attribute successes to outside factors - luck, colleagues
-% attribute failures to themselves
-% found to be far more common in women than men
-% women viewing ourselves as phony is consistent with societal view that we aren't competent
-% easier to not internalize success than go against the views of society!
-% often seem to perservere despite that, some desire to prove society and themselves wrong
-  \end{center}
-\end{frame}
 
 \begin{frame}
   \begin{center}
     \Huge 4 Behaviours that preserve it
-    \begin{itemize}
-      \item Diligence
-      \item Intellectual Inauthenticity
-      \item Use of charm
-      \item Avoiding displays of confidence
-    \end{itemize}
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
     \Huge Diligence
+    \\ \small \cite{clanceimes78}
 
-    "She develops an unstated but vaguely aware belief that if she were to think she could succeed she would  actually  fail."
+    %"She develops an unstated but vaguely aware belief that if she were to think she could succeed she would  actually  fail."
 % fear getting caught, so work hard to prevent discovery
 % when we get success and approval we dismiss it as just because we worked so hard
 % feels temporary elation on success
@@ -286,6 +278,8 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge Intellectual Inauthenticity
+
+    \\ \small \cite{clanceimes78}
 % chose not to reveal ideas or opinions
 % tell people what they want to hear
 % intellectual flattery - writing according to their teachers' biases
@@ -299,9 +293,11 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge Charm
-    "Typically, she believes, "I am stupid," but at anther
-    level  she  believes  she  is  brilliant,  creative,  and  special  if  only  the  right  person  would  discover
-    her genius and thereby help her believe in her intellect. "
+
+    \\ \small \cite{clanceimes78}
+    %"Typically, she believes, "I am stupid," but at anther
+    %level  she  believes  she  is  brilliant,  creative,  and  special  if  only  the  right  person  would  discover
+    %her genius and thereby help her believe in her intellect. "
 % aim to be liked as well as recognised intellectually
 % finds a candidate she respects, then tries to impress to gain approval
 % studies them, figures out how to impress them, sets about winning them over
@@ -319,6 +315,8 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge Avoiding displays of confidence
+
+    \\ \small \cite{clanceimes78}
 % find a recent quote for success going against likeability for women
 % Many women have a motive to avoid success, a well justified fear of rejection or less feminine if they do
 % look at all the crap Julia Gillard put up with - quote from her speech
@@ -330,14 +328,14 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge What are the consequences?
-% Outing the imposter: study exploring IP among HE faculty
-% DOI:  10.1002/nha3.20098
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
     \Huge Bouts of depression and anxiety
+
+    \\ \small \cite{hh15}
   \end{center}
 \end{frame}
 
@@ -345,18 +343,24 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge Psychological distress
+
+    \\ \small \cite{hh15}
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
     \Huge Low self confidence
+
+    \\ \small \cite{hh15}
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
     \Huge adversely related to job well-being, satisfaction and performance
+
+    \\ \small \cite{hh15}
   \end{center}
 \end{frame}
 
