Add some more coping mechanisms

--- a/slides.tex
+++ b/slides.tex
@@ -373,35 +373,45 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge Mentoring
+
+    \\ \small \cite{hh15}
 % They can normalise the feelings
 % emotional support
 % instrumental support
 % challenge to accept praise
+% even helpful if they don't discuss IP
+    % mentors can be the target of unfair comparisons - most don't directly discuss with mentor
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
-    \Huge
+    \Huge Seek emotional support
+    \\ \small \cite{hh15}
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
-    \Huge
+    \Huge positive reinforcement
+    \\ \small \cite{hh15}
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
-    \Huge
+    \Huge active coping
+    \\ \small \cite{hh15}
+    % Active coping strategies involve an awareness of the stressor, followed by attempts to reduce the negative outcome - https://www.semel.ucla.edu/dual-diagnosis-program/News_and_Resources/How_Do_You_Cope
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
-    \Huge
+    \Huge Humor
+    \\ \small \cite{hh15}
   \end{center}
+
 \end{frame}
 
 \begin{frame}
