Add note that success doesn't fix it

--- a/slides.tex
+++ b/slides.tex
@@ -159,7 +159,7 @@ confidence that I will do well
 % initially discovered in high achieving women studying and in academia
 % later found in to be in other populations too
 % Maybe higher in women, research goes both ways (citation?)
-% Maybe higher in some ethnic group, studied in African Americans (citation?
+% Maybe higher in some ethnic group, studied in African Americans (citation?)
 % http://www.paulineroseclance.com/pdf/ip_high_achieving_women.pdf
   \end{center}
 \end{frame}
@@ -190,6 +190,13 @@ confidence that I will do well
   \end{center}
 \end{frame}
 
+\begin{frame}
+  \begin{center}
+    \Huge Success does not fix it
+    \\ \small \cite{clanceimes78}
+    % because they dismiss the success
+  \end{center}
+\end{frame}
 
 \begin{frame}
   \begin{center}
@@ -395,6 +402,7 @@ confidence that I will do well
   \begin{center}
     \Huge positive reinforcement
     \\ \small \cite{hh15}
+    % greens appreciation letters (include photo)
   \end{center}
 \end{frame}
 
@@ -411,7 +419,6 @@ confidence that I will do well
     \Huge Humor
     \\ \small \cite{hh15}
   \end{center}
-
 \end{frame}
 
 \begin{frame}
