--- a/slides.tex
+++ b/slides.tex
@@ -166,6 +166,21 @@ confidence that I will do well
 
 \begin{frame}
   \begin{center}
+    \Huge Minorities
+    \\ \small \cite{apa13}
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge New endeavour
+    \\ \small \cite{apa13}
+    % me with the greens - Apsara & Asher suggesting I go for council
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
     \Huge What are the characteristics?
   \end{center}
 \end{frame}
@@ -187,6 +202,16 @@ confidence that I will do well
 % easier to not internalize success than go against the views of society!
 % often seem to perservere despite that, some desire to prove society and themselves wrong
     \\ \small \cite{hh15}
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge Gender differences
+    \\ \small \cite{clanceimes78}
+    % women more likely to attribute success to temp, external source - luck
+    % more likely to attribute failure to self - ability
+    % internalised sexism
   \end{center}
 \end{frame}
 
@@ -258,6 +283,7 @@ confidence that I will do well
 % "and who work in highly competitive, stressful occupations similar to that of the academic environment"
 % what about peer review?
 % minorities in the field?
+% higher in untenured faculty - probably maps to staff on fixed term contracts
     \\ \small \cite{hh15}
   \end{center}
 \end{frame}
@@ -346,6 +372,14 @@ confidence that I will do well
   \end{center}
 \end{frame}
 
+\begin{frame}
+  \begin{center}
+    \Huge Emotional exhaustion
+    \\ \small \cite{hh15}
+    % stress part of burnout - fatigue, depression, emotional and cognitive distancing -> low work satisfaction and performance
+  \end{center}
+\end{frame}
+
 
 \begin{frame}
   \begin{center}
@@ -387,7 +421,7 @@ confidence that I will do well
 % instrumental support
 % challenge to accept praise
 % even helpful if they don't discuss IP
-    % mentors can be the target of unfair comparisons - most don't directly discuss with mentor
+    % mentors can be the target of unfair comparisons - 67% don't directly discuss with mentor
   \end{center}
 \end{frame}
 
@@ -423,13 +457,13 @@ confidence that I will do well
 
 \begin{frame}
   \begin{center}
-    \Huge
+    \Huge distracting thoughs or activities
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
-    \Huge
+    \Huge social support
   \end{center}
 \end{frame}
 
