Add more coping tips

--- a/slides.bib
+++ b/slides.bib
@@ -42,3 +42,10 @@
   url = {https://web.archive.org/web/20160331190651/http://www.apa.org/gradpsych/2013/11/fraud.aspx},
   urldate = {2016-07-26}
 }
+
+@online{caltech,
+  author = {{Caltech Counselling Centre}},
+  title = {The Impostor Syndrome},
+  url = {https://counseling.caltech.edu/general/InfoandResources/Impostor},
+  urldate = {2016-07-26}
+}
