--- a/slides.tex
+++ b/slides.tex
@@ -243,6 +243,14 @@ confidence that I will do well
 
 \begin{frame}
   \begin{center}
+    \Huge Fear of failure
+    \\ \small \cite{sakulku11}
+    % perfectionism
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
     \Huge Denial of competence and Discounting praise
     \\ \small \cite{sakulku11}
   \end{center}
@@ -442,9 +450,24 @@ confidence that I will do well
 
 \begin{frame}
   \begin{center}
-    \Huge active coping
-    \\ \small \cite{hh15}
-    % Active coping strategies involve an awareness of the stressor, followed by attempts to reduce the negative outcome - https://www.semel.ucla.edu/dual-diagnosis-program/News_and_Resources/How_Do_You_Cope
+    \Huge identify feelings
+    \\ \small \cite{caltech}
+    % awareness is first step to change
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge reality check
+    \\ \small \cite{caltech}
+    % question the thoughts
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge differentiate between feelings and reality
+    \\ \small \cite{caltech}
   \end{center}
 \end{frame}
 
@@ -458,12 +481,15 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge distracting thoughs or activities
+    \\ \small \cite{hh15}
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
     \Huge social support
+    \\ \small \cite{caltech}
+    % discuss feelings, get perspective
   \end{center}
 \end{frame}
 
