Add self presentation section and some smaller details

--- a/slides.bib
+++ b/slides.bib
@@ -8,7 +8,7 @@
   doi={10.1002/nha3.20098},
   pages={3-12}
 }
-@book{Clance85,
+@book{clance85,
   author* = {Pauline Rose Clance, Ph.D., ABPP},
   year = {1985},
   title = {The Impostor Phenomenon:  When Success Makes You Feel Like A Fake},
