--- a/slides.tex
+++ b/slides.tex
@@ -219,7 +219,10 @@ confidence that I will do well
   \begin{center}
     \Huge Success does not fix it
     \\ \small \cite{clanceimes78}
+    \\ \small \cite{sakulku11}
     % because they dismiss the success
+    % disregard if there is any gap between their expectations and performance
+    % repititions of success show dif between actual and ideal standards, make it worse
   \end{center}
 \end{frame}
 
@@ -267,13 +270,18 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge What childhood circumstances create it?
+    \\ \small \cite{sakulku11}
 % Generally either has a sibling or close relative that was the designated 'intelligent' family member
 % the woman is then told that she is the 'sensitive' or socially adept one, not the smart one
 % if told that because they are a woman then stereotype threat?
 % or, told that they are superior in every way and success will come easily
 % Then they can't cope with when it doesn't
-
-    \small \cite{sakulku11}
+% Family valueing success with little effort
+% descrepency between feedback and actual success
+    % lack of positive reinforcement
+    % IP higher when family cohesion and expressiveness are low, family conflict and control high. Accounted for 12% of variation
+    % if not supported or approved may feel achievements are dismissed, unimpressive, unimportant.
+    % shame, humiliation and inauthenticity common with lack of +ve reinforcement
   \end{center}
 \end{frame}
 
@@ -282,6 +290,7 @@ confidence that I will do well
     \Huge Personality traits
 % "common among individuals with particular personality traits (e.g. neuroticism, conscientiousness, achievement-orientation), have perfectionist expectations over work"
     \\ \small \cite{hh15}
+    \\ \small \cite{sakulku11}
   \end{center}
 \end{frame}
 
@@ -296,6 +305,18 @@ confidence that I will do well
   \end{center}
 \end{frame}
 
+\begin{frame}
+  \begin{center}
+    \Huge Self presentation
+    \\ \small \cite{sakulku11}
+    % Do not want to appear imperfect, but actually openly disclose their imperfection.
+    % Is it an interpersonal strategy rather than self evalution?
+    % could be to avoid negative interpersonal implications of future failures
+    % only express lower performance expectations when they know others see it
+    % correlated with other favourale impression management strategies
+    % makes *lots* of sense for women in tech, since being since as competetent makes you less likeable
+  \end{center}
+\end{frame}
 
 \begin{frame}
   \begin{center}
@@ -319,7 +340,6 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge Intellectual Inauthenticity
-
     \\ \small \cite{clanceimes78}
 % chose not to reveal ideas or opinions
 % tell people what they want to hear
@@ -334,7 +354,6 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge Charm
-
     \\ \small \cite{clanceimes78}
     %"Typically, she believes, "I am stupid," but at anther
     %level  she  believes  she  is  brilliant,  creative,  and  special  if  only  the  right  person  would  discover
@@ -356,7 +375,6 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge Avoiding displays of confidence
-
     \\ \small \cite{clanceimes78}
 % find a recent quote for success going against likeability for women
 % Many women have a motive to avoid success, a well justified fear of rejection or less feminine if they do
@@ -374,8 +392,14 @@ confidence that I will do well
 
 \begin{frame}
   \begin{center}
-    \Huge Bouts of depression and anxiety
+    \Huge Poor mental health
+    \\ \small \cite{sakulku11}
+  \end{center}
+\end{frame}
 
+\begin{frame}
+  \begin{center}
+    \Huge Bouts of depression and anxiety
     \\ \small \cite{hh15}
   \end{center}
 \end{frame}
