add self efficacy, systems librarians and african american content

--- a/slides.tex
+++ b/slides.tex
@@ -278,7 +278,7 @@ confidence that I will do well
 % Then they can't cope with when it doesn't
 % Family valueing success with little effort
 % descrepency between feedback and actual success
-    % lack of positive reinforcement
+    % lack of positive reinforcement - ``nothing they do is ever good enough''
     % IP higher when family cohesion and expressiveness are low, family conflict and control high. Accounted for 12% of variation
     % if not supported or approved may feel achievements are dismissed, unimpressive, unimportant.
     % shame, humiliation and inauthenticity common with lack of +ve reinforcement
@@ -289,6 +289,7 @@ confidence that I will do well
   \begin{center}
     \Huge Personality traits
 % "common among individuals with particular personality traits (e.g. neuroticism, conscientiousness, achievement-orientation), have perfectionist expectations over work"
+    % inverse with conscientiousness? what was the source?
     \\ \small \cite{hh15}
     \\ \small \cite{sakulku11}
   \end{center}
@@ -301,7 +302,23 @@ confidence that I will do well
 % what about peer review?
 % minorities in the field?
 % higher in untenured faculty - probably maps to staff on fixed term contracts
+    % not studied in tech, but higher in systems librarians than other librarians
+    % high tech knowledge requirements, constant technical change, feel out of date
     \\ \small \cite{hh15}
+    \\ \small \cite{clark14}
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge Racial issues
+    \\ \small \cite{colour}
+    % studied in African Americans
+    % people's presumed incompetence in African American women
+    % vital for them to establish self worth and self reliance - others assessment will be unfairly negative
+    % Group counselling with other African American women is very effective
+    % more comfortable with people like them, see the ridicilousness of others IP
+    % similar situation -> share strategies
   \end{center}
 \end{frame}
 
@@ -436,6 +453,19 @@ confidence that I will do well
     \\ \small \cite{hh15}
   \end{center}
 \end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge Low self-efficacy
+    \\ \small \cite{feedback}
+    % attribute initial success to ability, higher self efficacy
+    % higher self efficacy related to higher performance
+    % leads to higher self efficacy
+    % performance analysis in early life super important - provides anchor, influencing later attribution
+  \end{center}
+\end{frame}
+
+
 
 \begin{frame}
   \begin{center}
