--- a/slides.bib
+++ b/slides.bib
@@ -49,3 +49,21 @@
   url = {https://counseling.caltech.edu/general/InfoandResources/Impostor},
   urldate = {2016-07-26}
 }
+
+@article {clark14,
+  author={Melanie Clark, Kimberly Vardeman, and Shelley Barba},
+  title={Perceived Inadequacy: A Study of the Imposter Phenomenon among College and Research Librarians},
+  journal={College & Research Libraries},
+  volume={75},
+  issue={3},
+  year=2014,
+  pages={255-271}
+}
+
+@article {colour,
+  author={Frances Keith Trotman},
+  title={The Imposter Phenomenon Among African American Women in U.S. Institutions of Higher Education: Implications for Counseling},
+  journal={Compelling counseling interventions: VISTAS 2009},
+  year=2009,
+  pages={77-87}
+}
