More details on family and consequences

--- a/slides.bib
+++ b/slides.bib
@@ -53,7 +53,7 @@
 @article {clark14,
   author={Melanie Clark, Kimberly Vardeman, and Shelley Barba},
   title={Perceived Inadequacy: A Study of the Imposter Phenomenon among College and Research Librarians},
-  journal={College & Research Libraries},
+  journal={College \& Research Libraries},
   volume={75},
   issue={3},
   year=2014,
@@ -66,4 +66,24 @@
   journal={Compelling counseling interventions: VISTAS 2009},
   year=2009,
   pages={77-87}
+}
+
+@article {attr98,
+  author={Ted Thompson, Helen Davis, John Davidson},
+  title={Attributional and affective responses of impostors to academic success and failure outcomes},
+  journal={Personality and Individual Differences},
+  year=1998,
+  volume={25},
+  issue={3},
+  pages={381-396}
+}
+
+@article {langford93,
+  author={Joe Langford \& Pauline Rose Clance},
+  title={The impostor phenomenon: Recent research findings regarding dynamics, personality, and family patterns and their implication for treatment},
+  journal={Psychotherapy: Theory, Research, Practice, Training},
+  year=1993,
+  volume={30},
+  issue={3},
+  pages={495-501}
 }
