--- a/slides.tex
+++ b/slides.tex
@@ -156,11 +156,12 @@ confidence that I will do well
   \begin{center}
     \Huge Who has it?
     \\ \small \cite{clanceimes78}
-% initially discovered in high achieving women studying and in academia
-% later found in to be in other populations too
-% Maybe higher in women, research goes both ways (citation?)
-% Maybe higher in some ethnic group, studied in African Americans (citation?)
-% http://www.paulineroseclance.com/pdf/ip_high_achieving_women.pdf
+    \\ \small \cite{attr98}
+    \\ \small \cite{colour}
+    % initially discovered in high achieving women studying and in academia
+    % later found in to be in other populations too
+    % Maybe higher in women, research goes both ways
+    % Maybe higher in some ethnic groups, studied in African Americans
   \end{center}
 \end{frame}
 
@@ -201,7 +202,13 @@ confidence that I will do well
 % women viewing ourselves as phony is consistent with societal view that we aren't competent
 % easier to not internalize success than go against the views of society!
 % often seem to perservere despite that, some desire to prove society and themselves wrong
+    % often believe that intelligence is fixed rather than malleable
+    % motivated by performance goals, try to prove intelligence
+    % when fail - react 'helpless' way, blame selves, withdraw from task, anxiety, shame
+    % overriding concern with others' impressions, idealised self image
+    % self worth unusually dependent on others - external validation goes away, they fall apart
     \\ \small \cite{hh15}
+    \\ \small \cite{langford93}
   \end{center}
 \end{frame}
 
@@ -266,11 +273,59 @@ confidence that I will do well
   \end{center}
 \end{frame}
 
+\begin{frame}
+  \begin{center}
+    \Huge defendence
+    \\ \small \cite{Langford93}
+    % mistrusting others
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge low affiliation
+    \\ \small \cite{Langford93}
+    % in women. enjoyable involvement with other people
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge Low play
+    \\ \small \cite{Langford93}
+    % don't do things for fun
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge impulsivity
+    \\ \small \cite{Langford93}
+    % low in women, high in men
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge need for change
+    \\ \small \cite{Langford93}
+    % low in women, high in men
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge low need for order
+    \\ \small \cite{Langford93}
+    % in men
+  \end{center}
+\end{frame}
 
 \begin{frame}
   \begin{center}
     \Huge What childhood circumstances create it?
     \\ \small \cite{sakulku11}
+    \\ \small \cite{Langford93}
 % Generally either has a sibling or close relative that was the designated 'intelligent' family member
 % the woman is then told that she is the 'sensitive' or socially adept one, not the smart one
 % if told that because they are a woman then stereotype threat?
@@ -282,6 +337,8 @@ confidence that I will do well
     % IP higher when family cohesion and expressiveness are low, family conflict and control high. Accounted for 12% of variation
     % if not supported or approved may feel achievements are dismissed, unimpressive, unimportant.
     % shame, humiliation and inauthenticity common with lack of +ve reinforcement
+    % IP highly correlated with need to please others in family
+    % try to live up to idealised image to win approval
   \end{center}
 \end{frame}
 
@@ -534,7 +591,7 @@ confidence that I will do well
 
 \begin{frame}
   \begin{center}
-    \Huge distracting thoughs or activities
+    \Huge distracting thoughts or activities
     \\ \small \cite{hh15}
   \end{center}
 \end{frame}
@@ -549,25 +606,10 @@ confidence that I will do well
 
 \begin{frame}
   \begin{center}
-    \Huge
-  \end{center}
-\end{frame}
-
-\begin{frame}
-  \begin{center}
-    \Huge
-  \end{center}
-\end{frame}
-
-\begin{frame}
-  \begin{center}
-    \Huge
-  \end{center}
-\end{frame}
-
-\begin{frame}
-  \begin{center}
-    \Huge
+    \Huge reduce dependency
+    \\ \small \cite{langford93}
+    % on external validation for self esteem
+    % internalise self worth
   \end{center}
 \end{frame}
 
