Add intro & conclusion, clean up slides,

--- a/slides.bib
+++ b/slides.bib
@@ -79,11 +79,21 @@
 }
 
 @article {langford93,
-  author={Joe Langford \& Pauline Rose Clance},
+  author={Joe Langford \& Pauline Clance},
   title={The impostor phenomenon: Recent research findings regarding dynamics, personality, and family patterns and their implication for treatment},
   journal={Psychotherapy: Theory, Research, Practice, Training},
   year=1993,
   volume={30},
   issue={3},
   pages={495-501}
+}
+
+@article {feedback,
+  author={Julie A. Lyden, Lillian H. Chaney, V.Carol Danehower, David A. Houston},
+  title={Anchoring, Attributions, and Self-Efficacy: An Examination of Interactions},
+  journal={Contemporary Educational Psychology},
+  year=2002,
+  volume={27},
+  issue={1},
+  pages={99-117}
 }
