--- a/slides.tex
+++ b/slides.tex
@@ -23,6 +23,36 @@
 
 \begin{frame}
   \begin{center}
+    \Huge Do you have it?
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge How does it work?
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge How does it preserve itself?
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge Consequences
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge Dealing with it
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
     \Huge Are any of these true for you?
     \\ \small \cite{clance85}
   \end{center}
@@ -275,16 +305,16 @@ confidence that I will do well
 
 \begin{frame}
   \begin{center}
-    \Huge defendence
-    \\ \small \cite{Langford93}
+    \Huge Defendence
+    \\ \small \cite{langford93}
     % mistrusting others
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
-    \Huge low affiliation
-    \\ \small \cite{Langford93}
+    \Huge Low affiliation
+    \\ \small \cite{langford93}
     % in women. enjoyable involvement with other people
   \end{center}
 \end{frame}
@@ -292,31 +322,31 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge Low play
-    \\ \small \cite{Langford93}
+    \\ \small \cite{langford93}
     % don't do things for fun
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
-    \Huge impulsivity
-    \\ \small \cite{Langford93}
+    \Huge Impulsivity
+    \\ \small \cite{langford93}
     % low in women, high in men
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
-    \Huge need for change
-    \\ \small \cite{Langford93}
+    \Huge Need for change
+    \\ \small \cite{langford93}
     % low in women, high in men
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
-    \Huge low need for order
-    \\ \small \cite{Langford93}
+    \Huge Low need for order
+    \\ \small \cite{langford93}
     % in men
   \end{center}
 \end{frame}
@@ -325,7 +355,7 @@ confidence that I will do well
   \begin{center}
     \Huge What childhood circumstances create it?
     \\ \small \cite{sakulku11}
-    \\ \small \cite{Langford93}
+    \\ \small \cite{langford93}
 % Generally either has a sibling or close relative that was the designated 'intelligent' family member
 % the woman is then told that she is the 'sensitive' or socially adept one, not the smart one
 % if told that because they are a woman then stereotype threat?
@@ -505,8 +535,7 @@ confidence that I will do well
 
 \begin{frame}
   \begin{center}
-    \Huge adversely related to job well-being, satisfaction and performance
-
+    \Huge Adversely related to job well-being, satisfaction and performance
     \\ \small \cite{hh15}
   \end{center}
 \end{frame}
@@ -546,14 +575,7 @@ confidence that I will do well
 
 \begin{frame}
   \begin{center}
-    \Huge Seek emotional support
-    \\ \small \cite{hh15}
-  \end{center}
-\end{frame}
-
-\begin{frame}
-  \begin{center}
-    \Huge positive reinforcement
+    \Huge Positive reinforcement
     \\ \small \cite{hh15}
     % greens appreciation letters (include photo)
   \end{center}
@@ -561,7 +583,7 @@ confidence that I will do well
 
 \begin{frame}
   \begin{center}
-    \Huge identify feelings
+    \Huge Identify feelings
     \\ \small \cite{caltech}
     % awareness is first step to change
   \end{center}
@@ -569,7 +591,7 @@ confidence that I will do well
 
 \begin{frame}
   \begin{center}
-    \Huge reality check
+    \Huge Reality check
     \\ \small \cite{caltech}
     % question the thoughts
   \end{center}
@@ -577,7 +599,7 @@ confidence that I will do well
 
 \begin{frame}
   \begin{center}
-    \Huge differentiate between feelings and reality
+    \Huge Differentiate between feelings and reality
     \\ \small \cite{caltech}
   \end{center}
 \end{frame}
@@ -591,14 +613,14 @@ confidence that I will do well
 
 \begin{frame}
   \begin{center}
-    \Huge distracting thoughts or activities
+    \Huge Distracting thoughts or activities
     \\ \small \cite{hh15}
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
-    \Huge social support
+    \Huge Social support
     \\ \small \cite{caltech}
     % discuss feelings, get perspective
   \end{center}
@@ -606,10 +628,53 @@ confidence that I will do well
 
 \begin{frame}
   \begin{center}
-    \Huge reduce dependency
+    \Huge Reduce dependency
     \\ \small \cite{langford93}
     % on external validation for self esteem
     % internalise self worth
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge What to do?
+    % steps to help yourself and others who experience IP
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge Talk about it
+    % discuss it in your workplace
+    % like the group therapy sessions
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge Be aware when people show it
+    % yourself and others
+    % I had such bad IP I thought 'they have IP, but I'm right!'
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge Challenge people to accept positive feedback
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge Get perspective
+    % from people that will evaluate you fairly
+    % don't charm them
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge Questions?
   \end{center}
 \end{frame}
 
@@ -619,4 +684,4 @@ confidence that I will do well
   \bibliography{./slides}
 \end{frame}
 
-\end{document}
+?\end{document}
