Clean up some repitition

--- a/slides.tex
+++ b/slides.tex
@@ -35,12 +35,6 @@
 
 \begin{frame}
   \begin{center}
-    \Huge How does it preserve itself?
-  \end{center}
-\end{frame}
-
-\begin{frame}
-  \begin{center}
     \Huge Consequences
   \end{center}
 \end{frame}
@@ -244,22 +238,13 @@ confidence that I will do well
 
 \begin{frame}
   \begin{center}
-    \Huge Gender differences
-    \\ \small \cite{clanceimes78}
-    % women more likely to attribute success to temp, external source - luck
-    % more likely to attribute failure to self - ability
-    % internalised sexism
-  \end{center}
-\end{frame}
-
-\begin{frame}
-  \begin{center}
     \Huge Success does not fix it
     \\ \small \cite{clanceimes78}
     \\ \small \cite{sakulku11}
     % because they dismiss the success
     % disregard if there is any gap between their expectations and performance
     % repititions of success show dif between actual and ideal standards, make it worse
+    % deny our competence, discount praise
   \end{center}
 \end{frame}
 
@@ -269,29 +254,6 @@ confidence that I will do well
     % will be the biggest fish in a small pond (school)
     % then go to uni - lots of bright people, not the best anymore
     % conclude that they are stupid because they aren't the best anymore
-    \\ \small \cite{sakulku11}
-  \end{center}
-\end{frame}
-
-\begin{frame}
-  \begin{center}
-    \Huge Superman/Superwoman aspects
-    \\ \small \cite{sakulku11}
-    % perfectionism
-  \end{center}
-\end{frame}
-
-\begin{frame}
-  \begin{center}
-    \Huge Fear of failure
-    \\ \small \cite{sakulku11}
-    % perfectionism
-  \end{center}
-\end{frame}
-
-\begin{frame}
-  \begin{center}
-    \Huge Denial of competence and Discounting praise
     \\ \small \cite{sakulku11}
   \end{center}
 \end{frame}
@@ -358,7 +320,6 @@ confidence that I will do well
     \\ \small \cite{langford93}
 % Generally either has a sibling or close relative that was the designated 'intelligent' family member
 % the woman is then told that she is the 'sensitive' or socially adept one, not the smart one
-% if told that because they are a woman then stereotype threat?
 % or, told that they are superior in every way and success will come easily
 % Then they can't cope with when it doesn't
 % Family valueing success with little effort
@@ -375,7 +336,7 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge Personality traits
-% "common among individuals with particular personality traits (e.g. neuroticism, conscientiousness, achievement-orientation), have perfectionist expectations over work"
+% "common among individuals with particular personality traits (e.g. neuroticism, achievement-orientation), have perfectionist expectations over work"
     % inverse with conscientiousness? what was the source?
     \\ \small \cite{hh15}
     \\ \small \cite{sakulku11}
@@ -387,7 +348,6 @@ confidence that I will do well
     \Huge Work circumstances that contribute
 % "and who work in highly competitive, stressful occupations similar to that of the academic environment"
 % what about peer review?
-% minorities in the field?
 % higher in untenured faculty - probably maps to staff on fixed term contracts
     % not studied in tech, but higher in systems librarians than other librarians
     % high tech knowledge requirements, constant technical change, feel out of date
@@ -424,20 +384,7 @@ confidence that I will do well
 
 \begin{frame}
   \begin{center}
-    \Huge 4 Behaviours that preserve it
-  \end{center}
-\end{frame}
-
-\begin{frame}
-  \begin{center}
-    \Huge Diligence
-    \\ \small \cite{clanceimes78}
-
-    %"She develops an unstated but vaguely aware belief that if she were to think she could succeed she would  actually  fail."
-% fear getting caught, so work hard to prevent discovery
-% when we get success and approval we dismiss it as just because we worked so hard
-% feels temporary elation on success
-% success on the surface, but underlying phoniness remains
+    \Huge Behaviours that preserve it
   \end{center}
 \end{frame}
 
@@ -684,4 +631,4 @@ confidence that I will do well
   \bibliography{./slides}
 \end{frame}
 
-?\end{document}
+\end{document}
